@@ -276,10 +276,6 @@ char *sfcb_pathToChars(const CMPIObjectPath * cop, CMPIStatus * rc, char *str)
    hn = cop->ft->getHostname(cop, rc);
    ns = cop->ft->getNameSpace(cop, rc);
    cn = cop->ft->getClassName(cop, rc);
-   if (hn && hn->hdl && *(char*)hn->hdl) {
-      strcat(str, (char*)hn->hdl);
-      strcat(str, "|");
-   }
    if (ns && ns->hdl && *(char*)ns->hdl) {
       strcat(str,(char*)ns->hdl);
       strcat(str,":");
@@ -539,23 +535,17 @@ static void addKey(CMPIObjectPath * op, char *kd, int ref)
 
 CMPIObjectPath *getObjectPath(char *path, char **msg)
 {
-   char *p, *pp, *last, *un, *cname, *nname=NULL, *hname=NULL;
-   char *u;
+   char *p, *pp, *last, *un, *cname, *nname=NULL;
+   char *origu, *u;
    int ref = 0;
    CMPIObjectPath *op;
 
    if (path == NULL) {
      return NULL;
    }
-   u = strdup(path);
+   u = origu = strdup(path);
    last = u + strlen(u);
    *msg = NULL;
-
-   p = strchr(u, '|');
-   if (p) {
-      hname=strnDup(u, p-u);
-      u=p+1;
-   }
 
    p = strchr(u, '.');
    if (!p) {
@@ -565,16 +555,15 @@ CMPIObjectPath *getObjectPath(char *path, char **msg)
             u=pp+1;
          }      
          cname = strdup(u);
+//         op = Broker->eft->newObjectPath(Broker, nname ? nname : "root/cimv2", cname, NULL);
          op = Broker->eft->newObjectPath(Broker, nname , cname, NULL);
          free(cname);
+         free(origu);
          if (nname) free(nname);
-         if(hname) {
-            op->ft->setHostname(op, hname);
-            free(hname);
-         }
          return op;
       }
       *msg = "No className found";
+      free(origu);
       if (nname) free(nname);
       return NULL;
    }
@@ -585,11 +574,8 @@ CMPIObjectPath *getObjectPath(char *path, char **msg)
    }  
      
    cname = strnDup(u, p - u);
+//   op = Broker->eft->newObjectPath(Broker, nname ? nname : "root/cimv2", cname, NULL);
    op = Broker->eft->newObjectPath(Broker, nname , cname, NULL);
-   if(hname) {
-      op->ft->setHostname(op, hname);
-      free(hname);
-   }
    free(cname);
    if (nname) free(nname);
 
@@ -610,16 +596,19 @@ CMPIObjectPath *getObjectPath(char *path, char **msg)
       if (*p == '"') {
          if (*(p - 1) != '=') {
             *msg = "Incorrectly quoted string 1";
+            free(origu);
             return NULL;
          }
          p++;
          if ((p = strchr(p, '"')) == NULL) {
             *msg = "Unbalanced quoted string";
+            free(origu);
             return NULL;
          }
          p++;
          if (*p != ',' && *p != 0) {
             *msg = "Incorrectly quoted string 2";
+            free(origu);
             return NULL;
          }
          if (*p == 0)
@@ -634,6 +623,7 @@ CMPIObjectPath *getObjectPath(char *path, char **msg)
       addKey(op, t, ref);
       free(t);
    }
+   free(origu);
    return op;
 }
 
