@@ -21,7 +21,6 @@ Bugs fixed:
 - 1725493 Fixed 401 send twice
 - 1746771 Fixed Memory leak in classProviderGz.c - in gatherNameSpaces()
 - 1748392 Fixed associations in interop namespace might not work
-- 1751084 Fixed sfcb does not support a hostname in an objectpath
 - 1759208 Fixed internalProvider segfaults when object not found
 - 1752715 Fixed sfcb does not unescape incoming blanks
 - 1754811 Fixed sfcb misses refences/referenceNames call in certain upcalls
